--- a/src/App.css
+++ b/src/App.css
@@ -3,18 +3,20 @@
 .App {
   text-align: center;
   background: #464a55;
-  /*width: 50%;*/
-  margin: 10px; 
-  border-radius: 10px;
   font-family: 'M PLUS Rounded 1c', sans-serif;
-  position: relative;
-  
 }
 
 .topbar{
   display: flex;
   align-items: center;
-  justify-content: center;  
+  justify-content: center;
+  user-select: none;  
+}
+
+.topButton{
+  color: white;
+  text-align: center;
+  
 }
 
 .top1 {
@@ -30,6 +32,10 @@
   color:white;
 }
 
+.top1:hover{
+  background-color: #484e5a;
+}
+
 .top2{
   width: 90px;
   height: 90px;
@@ -39,6 +45,17 @@
   border-width: 6px;
   border-radius: 50%;
   background-color: #282c34;
+  align-content: center;
+  font-size: 25px;
+}
+
+.top2:hover{
+  background-color: #484e5a;
+}
+
+.top2:active{
+  position:relative;
+	top:5px;
 }
 
 .top3{
@@ -51,39 +68,14 @@
   border-radius: 50%;
   background-color: #282c34;
 }
+
+.top3:hover{
+  background-color: #484e5a;
+}
+
 .header {
   text-align: center;
 }
-
- @-webkit-keyframes outerCart {
-  0% {
-    -webkit-transform: translateZ(0);
-            transform: translateZ(0);
-    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-  }
-  100% {
-    -webkit-transform: translateZ(50px);
-            transform: translateZ(50px);
-    -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
-            box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
-  }
-}
-@keyframes outerCart {
-  0% {
-    -webkit-transform: translateZ(0);
-            transform: translateZ(0);
-    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-  }
-  100% {
-    -webkit-transform: translateZ(50px);
-            transform: translateZ(50px);
-    -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
-            box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
-  }
-}
-
 
 @media only screen and (max-width: 1105px) {
   .App {
