--- a/src/components/coupons/Coupons.css
+++ b/src/components/coupons/Coupons.css
@@ -4,8 +4,13 @@
     top: 0;
     left: 0; 
     padding: 10px;
-    border: 2px solid #000;
     background:#656b79;
     margin: 25px;
     margin-right: 0;
+    border-radius: 5px;
+}
+
+.inputField{
+    display:flex;
+    flex-direction:column;
 }
