--- a/src/components/products/Products.css
+++ b/src/components/products/Products.css
@@ -34,8 +34,9 @@
 }
 
 .image {
-    height: 150px;
-    width: 150px;
+    height: 300px;
+    width: 270px;
+    border-radius: 10px;
 }
 
 .button {
@@ -51,6 +52,7 @@
 	padding:6px 24px;
     margin: 2px;
     font-family: 'M PLUS Rounded 1c', sans-serif;
+    
 }
 
 .button:hover {
@@ -59,5 +61,5 @@
 
 .button:active{
     position:relative;
-	top:1px;
+    top: 5px;
 }
