--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -10,15 +10,20 @@
     border-radius: 5px;
 }
 
+
 .cartItems{
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
-.buttons{
-    display:flex;
-    flex-direction:column;
+.outerCart {
+    overflow-y: scroll; height:300px;
+    border-top: 2px solid #202427;
+    border-bottom: 2px solid #202427;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .material-symbols-outlined {
@@ -35,9 +40,8 @@
 	top:5px;
 }
 
-.exit{
-    display: flex;
-    height: 50px;
+.cartHeader {
+    margin: 5px;
 }
 
 .button {
