--- a/src/components/coupons/Coupons.css
+++ b/src/components/coupons/Coupons.css
@@ -1,16 +1,39 @@
 .main {
     display: inline-block;
     position: fixed;
-    top: 0;
+    top: 10;
     left: 0; 
     padding: 10px;
     background:#656b79;
     margin: 25px;
     margin-right: 0;
     border-radius: 5px;
+    -webkit-animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 .inputField{
     display:flex;
     flex-direction:column;
 }
+
+@-webkit-keyframes slide-top {
+    0% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+    }
+    100% {
+      -webkit-transform: translateY(-100px);
+              transform: translateY(-100px);
+    }
+  }
+  @keyframes slide-top {
+    0% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+    }
+    100% {
+      -webkit-transform: translateY(-100px);
+              transform: translateY(-100px);
+    }
+  }
